[metadata]
name = voluptuous
url = https://github.com/alecthomas/voluptuous
download_url = https://pypi.python.org/pypi/voluptuous
version = attr: voluptuous.__version__
description = Voluptuous, *despite* the name, is a Python data validation library
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
platforms = any
author = Alec Thomas
author_email = alec@swapoff.org
classifiers =
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',

[options]
packages: find:

[options.packages.find]
exclude = tests